bucket_F6/php80-intl
# Buildsheet autogenerated by ravenadm tool -- Do not edit.

NAMEBASE=		php80-intl
VERSION=		8.0.12
KEYWORDS=		lang www php devel
VARIANTS=		standard
SDESC[standard]=	PHP 8.0 extension: intl Internationalization
HOMEPAGE=		https://php.net/
CONTACT=		nobody

DOWNLOAD_GROUPS=	main
SITES[main]=		PHP/distributions
DISTFILE[1]=		php-8.0.12.tar.xz:main
DF_INDEX=		1
SPKGS[standard]=	single

OPTIONS_AVAILABLE=	none
OPTIONS_STANDARD=	none

BUILDRUN_DEPENDS=	icu:single:standard

USES=			php:ext,80 pkgconfig cpe

DISTNAME=		php-8.0.12/ext/{{PHP_MODNAME}}
EXTRACT_HEAD[1]=	{{TAR}} -xf
EXTRACT_TAIL[1]=	php-8.0.12/ext/{{PHP_MODNAME}}

CPE_PRODUCT=		php
CPE_VENDOR=		php
FPC_EQUIVALENT=		devel/php80-intl

CONFIGURE_ARGS=		--with-intl={{LOCALBASE}}

[FILE:54:descriptions/desc.single]
This package contains the intl extension for PHP 8.0.


[FILE:96:distinfo]
a501017b3b0fd3023223ea25d98e87369b782f8a82310c4033d7ea6a989fea0a     10713980 php-8.0.12.tar.xz


[FILE:1529:patches/patch-icu70]
Regressed by https://github.com/unicode-org/icu/commit/633438f8da99

In file included from breakiterator/breakiterator_class.cpp:23:
breakiterator/codepointiterator_internal.h:42:17: error: virtual function 'operator==' has a different return type ('UBool' (aka 'signed char')) than the function it overrides (which has return type 'bool')
                virtual UBool operator==(const BreakIterator& that) const;
                        ~~~~~ ^
/usr/local/include/unicode/brkiter.h:127:18: note: overridden virtual function is here
    virtual bool operator==(const BreakIterator&) const = 0;
            ~~~~ ^

--- breakiterator/codepointiterator_internal.cpp.orig	2021-09-21 10:24:05 UTC
+++ breakiterator/codepointiterator_internal.cpp
@@ -75,7 +75,11 @@ CodePointBreakIterator::~CodePointBreakIterator()
 	clearCurrentCharIter();
 }
 
+#if U_ICU_VERSION_MAJOR_NUM < 70
 UBool CodePointBreakIterator::operator==(const BreakIterator& that) const
+#else
+bool CodePointBreakIterator::operator==(const BreakIterator& that) const
+#endif
 {
 	if (typeid(*this) != typeid(that)) {
 		return FALSE;
--- breakiterator/codepointiterator_internal.h.orig	2021-09-21 10:24:05 UTC
+++ breakiterator/codepointiterator_internal.h
@@ -39,7 +39,11 @@ namespace PHP {
 
 		virtual ~CodePointBreakIterator();
 
+#if U_ICU_VERSION_MAJOR_NUM < 70
 		virtual UBool operator==(const BreakIterator& that) const;
+#else
+		virtual bool operator==(const BreakIterator& that) const;
+#endif
 
 		virtual CodePointBreakIterator* clone(void) const;
 

